# NcmaEngine

./: .gitignore  CMakeLists.txt  NcmaEngine.sln  NcmaEngine.vcxproj  NcmaEngine.vcxproj.filters  README.md  setup_window.bat
engine/: CMakeLists.txt
engine/sdk/imgui/examples/example_win32_directx12/: main.cpp
engine/source/runtime/core/: Core.h  CoreGlobal.cpp  CoreGlobal.h  CoreTypes.h
engine/source/runtime/core/generic/: Generic.h
engine/source/runtime/core/log/: Log.cpp  Log.h
engine/source/runtime/engine/: Engine.cpp  Engine.h
engine/source/runtime/gui/: GuiLayer.cpp  GuiLayer.h
engine/source/runtime/launch/: CMakeLists.txt  Launch.cpp
